add progress queue actions